adding untracked files

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "webpack serve --open --mode development",
     "build": "webpack --watch --mode production",
+    "scrape": "node ./client/imageScraper/scraper.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,7 +22,10 @@
   "homepage": "https://github.com/crawfish39/JackboxGamesTakeHome#readme",
   "dependencies": {
     "path": "^0.12.7",
+    "puppeteer": "^19.3.0",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
